# chipviz

./: .env.example  .gitignore  CHANGELOG.md  Makefile  README.md  justfile  mise.toml  release-please-config.json
.github/workflows/: c.yml  check.yml  docs.yml  python.yml  release-assets.yml  release-please.yml  roms.yml  rust.yml
assets/palettes/: README.md
assets/scenes/: README.md
cores/c64/: README.md
cores/c64/homebrew/: Makefile
cores/c64/src/: main.c
cores/gb/: README.md
cores/gb/homebrew/: Makefile  main.asm
cores/gb/src/: main.c
cores/gba/: README.md
cores/gba/homebrew/: Makefile
cores/gba/src/: main.c
cores/genesis/: README.md
cores/genesis/homebrew/: Makefile
cores/genesis/src/: main.c
cores/n64/: README.md
cores/n64/homebrew/: Makefile  main.c
cores/n64/src/: main.c
cores/nes/: README.md
cores/nes/homebrew/: Makefile  nes.cfg
cores/nes/src/: main.c
cores/sms/: README.md
cores/sms/homebrew/: Makefile
cores/sms/src/: main.c
cores/snes/: README.md
cores/snes/homebrew/: Makefile  chipviz-snes.c
cores/snes/src/: main.c
docs/: connections.md  homebrew-targets.md  n64-hardware.md
firmware/pico/: CMakeLists.txt  README.md
firmware/pico/include/chipviz_pico/: joybus_bridge.h
firmware/pico/src/: joybus_bridge.c  joybus_bridge.pio  main.c
host/bridge/: README.md  chipsynth_stream.py  chipviz_bridge.py  chipviz_encode.py  live_bridge.py  n64_joybus.py  usb_hid.py
host/fixtures/: README.md
host/fixtures/chipsynth/: groove.csv0  groove.cvz
host/fixtures/musical/: groove.cvz  scale.cvz  (+2 more)
renderers/modern/: Cargo.toml  README.md
renderers/modern/src/: app.rs  control_frame.rs  lib.rs  profile.rs  renderer.rs  scene.rs  shader.wgsl
scripts/: n64-docker-build.sh  package-release.sh  retroarch_smoke.py
shared/specs/: chipsynth-source-v0.md  chipsynth-viz-stream-v0.md  control-frame-v0.json  control-frame-v0.md  interface-v0.md  music-source-v0.md  n64-joybus-transport-v0.md  source-adapter-v0.md  usb-hid-transport-v0.md
shared/src/: connection.c  control_frame.c  interface.c
shared/tools/: README.md  build_homebrew.py  cvz_to_c.py  lint_docs.py
tests/: connection_tests.c  control_frame_tests.c  interface_tests.c  pico_joybus_tests.c  test_homebrew.py  test_host_bridge.py  test_transports.py
(+6 files in other folders)
